# agentic-investor-brief

./: .example.env  .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb  demo_agent.ipynb  demo_qa.ipynb  demo_tools.ipynb
prompts/analysis/: v1.py  v2.py
prompts/brief/: v1.py
src/agent_investor_brief/: config.py  prompt_manager.py  utils.py
src/agent_investor_brief/agents/: investor_agent.py  qa_agent.py
src/agent_investor_brief/tools/: analysis_builder.py  financial_data.py  industry_research.py
